# ChangeLog for sys-fs/cryptmount
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Oct 2007; Markus Ullmann <jokey@gentoo.org> cryptmount-1.2:
  don't install ABOUT-NLS file

  05 Apr 2007; Jakub Moc <jakub@gentoo.org> cryptmount-1.2.ebuild:
  Use bindnow-flags properly

  07 Jan 2007; Jakub Moc <jakub@gentoo.org> cryptmount-1.2.ebuild:
  Fix gettext dependencies

  04 Dec 2006; Markus Ullmann <jokey@gentoo.org> -cryptmount-1.1.ebuild:
  Remove old

  30 Nov 2006; Thomas Patrick (curmudgeon) <throw_away_2002@yahoo.com>
  +cryptmount-1.2.ebuild:
  New upstream version, no ebuild changes

  16 Sep 2006; Stefan Schweizer <genstef@gentoo.org> cryptmount-1.1.ebuild:
  CONFIG_CHECK and emake install

  14 Sep 2006; Thomas Patrick (curmudgeon) <throw_away_2002@yahoo.com>
  +cryptmount-1.1.ebuild, +metadata.xml:
  New ebuild (my first :) ) #147491
