@@ -1,4 +1,4 @@
 DIST cryptmount-1.2.tar.gz 207873 RMD160 20d45356719ae3910ecc00bd133df7cddfdcfea1 SHA1 9587f3a6509956280f19d85e751a26541ec92fc4 SHA256 84004796e4fe7f9b5c0e6dc90f2250be4bca40d7c8bf785b6d276421470e29b4
 EBUILD cryptmount-1.2.ebuild 1101 RMD160 30421fe5f15de33d29e806b57602b8f8e2097723 SHA1 4813ba3215a5e01734777a5ec4066fba2aacf7af SHA256 e78529e00ac202e2f8b6c6de6d470b5a16900ff0ea137d26ebb390f81ef66ab0
-MISC ChangeLog 893 RMD160 340bf700e4a2e0a8a6ecff5dcefec8bd501a690f SHA1 3ad12de20c11962bd9b464cdc4967ef792b77e31 SHA256 6d08ec0016962fb2dc4bc3170b459db18bd90b4ad993a6310decc1f912d55324
-MISC metadata.xml 479 RMD160 5e4dc631b5ef9d0599ceab035ee0144ca2b70eda SHA1 e4814157fff93c8d95b4aedaf5a651276f0a799f SHA256 de5b4b7c2a0ae4e0a7b9474ac0bbdf97ba73da2175b2cce8cf6cb914d004fb15
+MISC ChangeLog 983 RMD160 9ebf4e6c8f9f3e157544a1ab3d7339dd5d0c16f6 SHA1 ddb6e9bb58fc1c992750b1187f848ba7a452ffb1 SHA256 cbcc1c9e4bddd2fd4aa2b7929e8372227fb86f85740c9571fbcb4109117cb6b6
+MISC metadata.xml 358 RMD160 6fecbc827fe9194a0e18fa776da98a2e3d117f34 SHA1 33b540ba344c3c92643962a12456eb7206950ff6 SHA256 51961334427140753d420fd385d514dbdf088c035f5fc777b86419d2ac3bb66f
