@@ -1,19 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>
-		maintainer-wanted
-	</herd>
+	<herd>maintainer-wanted</herd>
 	<longdescription>
 		A utility for management and user-mode mounting of encrypted filesystems.
 		Easy to use and works with both block devices and files via loopback.
 	</longdescription>
-	<maintainer>
-		<email>
-			throw_away_2002@yahoo.com
-		</email>
-		<name>
-			Thomas Patrick
-		</name>
-	</maintainer>
 </pkgmetadata>
