@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/cryptmount
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
+  Fix metadata.xml
 
   28 Oct 2007; Markus Ullmann <jokey@gentoo.org> cryptmount-1.2:
   don't install ABOUT-NLS file
